WebHelpers ChangeLog

1.0b1 (tip)
* Delete deprecated subpackages: rails.
* Delete other deprecated subpackages: commands, hinclude, htmlgen, pagination.
* webhelpers.feedgenerator:
  - ``rfc3339_date`` now accepts date objects without crashing.
* webhelprs.html.tags:
  - Fix bug in tag helpers when passing 'id_' argument (although 'id' is
    recommended instead).
* webhelpers.paginate:
  - convert "_range" and "_pagelink" function to Page class method so that they
    can be overridden
  - pager "onclick" argument use template string value. So, javascript code can
    use "partial_url" or "page" value or any. Backward compatibility is
    considered.
* webhelpers.pylonslib:
  - is now a package.
  - ``webhelpers.pylonslib.minify`` contains enhanced versions of
    ``javascript_link`` and ``stylesheet_link`` to minify (shrink) files for
    more efficient transmission.  (Untested.)

0.6.4 (12/2/2008)
* text(), password(), checkbox(), textarea(), and select() have a
  magic 'id attribute. If not specified it defaults to the name. To suppress
  the ID entirely, pass ``id=""``.  This is to help set the ID for title().
  radio() doesn't do this because it generates the ID another way.  hidden()
  doesn't because hidden fields aren't used with labels.
* Bugfixes in mt.select(): 
  - selected values not being passed as list.
  - allow currently-selected value to be a long.
* Delete experimental module webhelpers.html.form_layout.

0.6.3 (10/7/2008)
* Bugfix in distribute() found by Randy Syring.
* New helpers title() and required_legend() in webhelpers.html.tags.
* New directory webhelpers/public for static files
* Suggested stylesheet webhelpers/public/stylesheets/webhelpers.css
  (You'll have to manually add this to your application.)

0.6.2 (10/2/2008)
* nl2br() and format-paragraphs were not literal-safe.
* webhelpers.converters:
  - New helper transpose() to turn a 2D list sideways (making the rows columns
    and the columns rows).
* webhelpers.markdown: